--- a/BulkyWeb/Views/Category/Index.cshtml
+++ b/BulkyWeb/Views/Category/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model List<Category>
 
+	<partial name="_Notification" />
 <div class="container">
 	<div class="row pt-4 pb-3">
 		<div class="col-6">
@@ -35,10 +36,10 @@
 			<td>@obj.DisplayOrder</td>
 			<td>
 				<div class="w-75 btn-group" role="group">
-					<a asp-controller="Category" asp-action="Edit" class="btn btn-primary mx-2">
+					<a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
 								<i class="bi bi-pencil-square"></i> Edit
 					</a>
-					<a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+							<a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
 						<i class="bi bi-trash-fill"></i> Delete
 					</a>
 				</div>
